# ode-ComfyUI-WanVideoWrapper

./: README.md  __init__.py  iching_wuxing_scheduler.cp313-win_amd64.pyd  iching_wuxing_scheduler_core.cp312-win_amd64.pyd  iching_wuxing_scheduler_core.py  pyproject.toml
.github/workflows/: publish.yml
wanvideo/: wan_video_nodes.py
wanvideo/schedulers/: __init__.py  flowmatch_sa_ode_stable.py
